testdata/baselines/reference/submodule/compiler/pathsValidation4.errors.txt
tsconfig.json(4,9): error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
  Use '"paths": {"*": "./src/*"}' instead.
tsconfig.json(5,9): error TS5061: Pattern '@interface/**/*' can have at most one '*' character.
tsconfig.json(5,9): error TS5061: Pattern '@service/**/*' can have at most one '*' character.
tsconfig.json(5,9): error TS5062: Substitution './src/service/**/*' in pattern '@service/**/*' can have at most one '*' character.


==== tsconfig.json (4 errors) ====
    {
        "compilerOptions": {
            "traceResolution": true,
            "baseUrl": "./src",
            ~~~~~~~~~
!!! error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use '"paths": {"*": "./src/*"}' instead.
            "paths": {
            ~~~~~~~
!!! error TS5061: Pattern '@interface/**/*' can have at most one '*' character.
            ~~~~~~~
!!! error TS5061: Pattern '@service/**/*' can have at most one '*' character.
            ~~~~~~~
!!! error TS5062: Substitution './src/service/**/*' in pattern '@service/**/*' can have at most one '*' character.
              "@interface/**/*" : ["./src/interface/*"],
              "@service/**/*": ["./src/service/**/*"],
              "@controller/*": ["controller/*"],
            }
        }
    }
    
==== src/main.ts (0 errors) ====
    import 'someModule';